**************************
 Image_Canvas - Changelog
**************************
Version x.x.x [2005-xxx-xx] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Added clipping (GD uses Image_Canvas method involving ImageCopy(), until native support is available throught existing GD functions gdImageSetClip())
    * Fixed the way SVG rotates text to use transform
    * Fixed Bug #6406 "method _mapFont missing"
    * Fixed Request #6632 "Style element assigned with = instead of :"
    * Fixed Bug #6769 "ImageMap.php does not check for boolean false with strpos"
    
Version 0.2.4 [2005-Nov-08] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Fixed a bug causing in Image_Canvas_SVG causing grouping to give a "Missing argument..." error (this rendered Image_Graph using SVG broken)
    * Fixed a bug causing rectangles not being displayed, if points were given in the wrong order

Version 0.2.3 [2005-Oct-28] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Fixed Bug #5786 "Error in producing SVG"
    * Fixed Bug #5805 "Canvas\Fonts\fontmap.txt is missing"    
    
Version 0.2.2 [2005-Sep-30] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Added 'border' and 'cssclass' option to Image_Canvas_GD::toHtml()
    * Added image support when using SVG (using embedded base64 encoding)
    * Added link ("imagemap") support with SVG
    * Made image loading in GD canvas use getimagesize() to determine type instead of relying on extension
    * Fixed bug where 'htmltags' were not transferred to image mapping of polygon vertices
    * Fixed bug in SVG where pie slices with some specific angles curled the wrong way
    * Fixed bug in Image_Canvas_ImageMap::show() and Image_Canvas_ImageMap::save() calling non-existing method _toHtml()
    * Fixed bug in Image_Canvas_SVG::polygon() not showing polygon if last point was a spline - addSpline()
    * Fixed bug causing line ends not to show if color not exlicitly defined
    * Fixed Bug #5066 "Reference Notices" (from Image_Graph)